--- a/zonoapp/templates/layout/sidebar.html
+++ b/zonoapp/templates/layout/sidebar.html
@@ -49,10 +49,10 @@
           </li>
           <li class="sidebar-list"><i class="fa fa-thumb-tack"></i><a class="sidebar-link sidebar-title" href="{% url 'list_call_logs' %}">
               <svg class="stroke-icon">
-                <use href="{% static 'assets/svg/icon-sprite.svg' %}#stroke-home"></use>
+                <use href="{% static 'assets/svg/icon-sprite.svg' %}#stroke-file"></use>
               </svg>
               <svg class="fill-icon">
-                <use href="{% static 'assets/svg/icon-sprite.svg' %}#fill-home"></use>
+                <use href="{% static 'assets/svg/icon-sprite.svg' %}#fill-file"></use>
               </svg><span class=" ">Call Logs</span></a>  
           </li>          
           <li class="sidebar-list"><i class="fa fa-thumb-tack"></i><a class="sidebar-link sidebar-title" href="{% url 'manage_campaign' %}">
@@ -75,12 +75,16 @@
             </div>
           </li>  
           <li class="sidebar-list"><i class="fa fa-thumb-tack"></i><a class="sidebar-link sidebar-title" href="{% url 'agent_create' %}">
+
             <svg class="stroke-icon">
               <use href="{% static 'assets/svg/icon-sprite.svg' %}#stroke-user"></use>
             </svg>
             <svg class="fill-icon">
               <use href="{% static 'assets/svg/icon-sprite.svg' %}#fill-user"></use>
-            </svg><span class=" ">Agent List</span></a>
+            </svg>
+            
+            <span class=" ">Agent List</span>
+          </a>
           </li>
           
 
@@ -168,19 +172,11 @@
                 </h6> -->
             </div>
           </li>
-          <!-- <li class="sidebar-list"> <i class="fa fa-thumb-tack"></i><a class="sidebar-link sidebar-title" href="#">
-            <svg class="stroke-icon">
-              <use href="{% static 'assets/svg/icon-sprite.svg' %}#stroke-layout"></use>
-            </svg>
-            <svg class="fill-icon">
-              <use href="{% static 'assets/svg/icon-sprite.svg' %}#fill-layout"></use>
-            </svg><span class="lan-7">                <a href="{% url 'voice_view' %}"  class="lan-21 no-color-change" style="all: inherit; cursor: pointer;"><h6>Voice</h6></a>
-            </span></a>
-        
-        </li> -->
+          
           
           <li class="sidebar-list"><i class="fa fa-thumb-tack"></i>
             <a class="sidebar-link sidebar-title" href="{% url 'voice_view' %}"><h6>Voice</h6></a>
+
           </li>
 
           
@@ -208,9 +204,21 @@
             <a class="sidebar-link sidebar-title" href="{% url 'qa_parameter' %}"><h6>QA Parameters</h6></a>
           </li>
 
+          <li class="sidebar-main-title">
+            <div>
+              <h6 class="lan-23">
+                <a href="{% url 'contact_sale' %}" class="lan-22 no-color-change" style="all: inherit; cursor: pointer;"> Contact Sale</a>
+              </h6>
+            </div>
+          </li>
+          <li class="sidebar-list"><i class="fa fa-thumb-tack"></i>
+            <a class="sidebar-link sidebar-title" href="{% url 'contact_sale' %}"><h6> Contact Sale </h6></a>
+          </li>
 
           
-        </ul>
+
+          
+        
       </div>
       <div class="right-arrow" id="right-arrow"><i data-feather="arrow-right"></i></div>
     </nav>
