changed dashboard view.py

--- a/zonoapp/templates/pages/dashboard/dashboard.html
+++ b/zonoapp/templates/pages/dashboard/dashboard.html
@@ -222,139 +222,7 @@
       </div>
 
     </div>
-      <div class="col-xxl-6 proorder-xl-9 box-col-12"> 
-        <div class="card">
-          <div class="card-header">
-            <div class="header-top"> 
-              <h4>Sales Details</h4>
-              <div class="sales-details"> 
-                <div class="user-activity">
-                  <ul> 
-                    <li>
-                      <div class="applications-menu">
-                        <div class="rounded-btn-primary"></div>
-                        <h3>Running Orders</h3>
-                      </div>
-                    </li>
-                    <li> 
-                      <div class="applications-menu">
-                        <div class="rounded-btn-secondary"> </div>
-                        <h3>Complete Delivery</h3>
-                      </div>
-                    </li>
-                  </ul>
-                </div>
-                <div class="dropdown icon-dropdown setting-menu">
-                  <button class="btn dropdown-toggle" id="userdropdown15" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    <svg>
-                      <use href="{% static 'assets/svg/icon-sprite.svg' %}#setting"> </use>
-                    </svg>
-                  </button>
-                  <div class="dropdown-menu dropdown-menu-end" aria-labelledby="userdropdown15"><a class="dropdown-item" href="#">Weekly</a><a class="dropdown-item" href="#">Monthly</a><a class="dropdown-item" href="#">Yearly</a></div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="card-body"> 
-            <h4 class="fw-bold">Calls Overview</h4>
-                <div id="comparison" class="mb-3"></div>
-              <canvas id="callsChart" height="100"></canvas>
-          </div>
-        </div>
-      </div>
-      <div class="col-xl-6 proorder-xl-8 box-col-12">
-        <div class="card">
-          <div class="card-header">
-            <div class="header-top"> 
-              <h4>Latest Offer Product</h4>
-              <div class="dropdown icon-dropdown setting-menu">
-                <button class="btn dropdown-toggle" id="userdropdown25" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  <svg> 
-                    <use href="{% static 'assets/svg/icon-sprite.svg' %}#setting"> </use>
-                  </svg>
-                </button>
-                <div class="dropdown-menu dropdown-menu-end" aria-labelledby="userdropdown25"><a class="dropdown-item" href="#">Weekly</a><a class="dropdown-item" href="#">Monthly</a><a class="dropdown-item" href="#">Yearly</a></div>
-              </div>
-            </div>
-          </div>
-          <div class="card-body product-page-main pt-0">
-            <div class="row">
-              <div class="col-lg-6">
-                <div class="product-slider owl-carousel owl-theme product-slides" id="sync3">
-                  <div class="item"> <img src="{% static 'assets/images/dashboard-2/product/10.png' %}" alt="product"></div>
-                  <div class="item"><img src="{% static 'assets/images/dashboard-2/product/11.png' %}" alt="product"></div>
-                  <div class="item"><img src="{% static 'assets/images/dashboard-2/product/12.png' %}" alt="product"></div>
-                  <div class="item"><img src="{% static 'assets/images/dashboard-2/product/13.png' %}" alt="product"></div>
-                  <div class="item"><img src="{% static 'assets/images/dashboard-2/product/10.png' %}" alt="product"></div>
-                  <div class="item"><img src="{% static 'assets/images/dashboard-2/product/11.png' %}" alt="product"></div>
-                  <div class="item"><img src="{% static 'assets/images/dashboard-2/product/12.png' %}" alt="product"></div>
-                  <div class="item"><img src="{% static 'assets/images/dashboard-2/product/13.png' %}" alt="product"></div>
-                </div>
-                <div class="owl-carousel owl-theme product-data" id="sync4">
-                  <div class="item"> <img src="{% static 'assets/images/dashboard-2/product/10.png' %}" alt="product"></div>
-                  <div class="item"><img src="{% static 'assets/images/dashboard-2/product/11.png' %}" alt="product"></div>
-                  <div class="item"><img src="{% static 'assets/images/dashboard-2/product/12.png' %}" alt="product"></div>
-                  <div class="item"><img src="{% static 'assets/images/dashboard-2/product/13.png' %}" alt="product"></div>
-                  <div class="item"><img src="{% static 'assets/images/dashboard-2/product/10.png' %}" alt="product"></div>
-                  <div class="item"><img src="{% static 'assets/images/dashboard-2/product/11.png' %}" alt="product"></div>
-                  <div class="item"><img src="{% static 'assets/images/dashboard-2/product/12.png' %}" alt="product"></div>
-                  <div class="item"> <img src="{% static 'assets/images/dashboard-2/product/13.png' %}" alt="product"></div>
-                </div>
-              </div>
-              <div class="col-lg-6"> 
-                <div class="product-details"><a href="/product_page">
-                    <h4>Apple iphone 13 Mini (512 GB) Green </h4></a>
-                  <div class="product-Price">
-                    <h2 class="txt-primary">$89,999 </h2>
-                    <div>
-                      <del>$1,19,999</del>
-                    </div>
-                  </div>
-                  <div class="d-flex gap-2 variants-title"> <span>Color :</span><span>Green</span></div>
-                  <div class="color-variants">
-                    <div class="form-check radio radio-primary">
-                      <input class="form-check-input" id="radio22" type="radio" name="radio1" value="option1" checked="">
-                      <label class="form-check-label" for="radio22"></label>
-                    </div>
-                    <div class="form-check radio radio-secondary">
-                      <input class="form-check-input" id="radio23" type="radio" name="radio1" value="option2">
-                      <label class="form-check-label" for="radio23"></label>
-                    </div>
-                    <div class="form-check radio radio-warning"> 
-                      <input class="form-check-input" id="radio24" type="radio" name="radio1" value="option3">
-                      <label class="form-check-label" for="radio24"></label>
-                    </div>
-                    <div class="form-check radio radio-info">
-                      <input class="form-check-input" id="radio25" type="radio" name="radio1" value="option4">
-                      <label class="form-check-label" for="radio25"></label>
-                    </div>
-                    <div class="form-check radio radio-danger">
-                      <input class="form-check-input" id="radio27" type="radio" name="radio1" value="option6">
-                      <label class="form-check-label" for="radio27"></label>
-                    </div>
-                  </div>
-                  <div class="d-flex gap-2 variants-title"><span>Size :</span><span>512GB </span></div>
-                  <div class="variants-button">
-                    <button class="btn btn-outline-primary btn-md" type="button" title="btn btn-pill btn-outline-primary btn-md">512GB</button>
-                    <button class="btn btn-outline-lights btn-md txt-dark" type="button" title="btn btn-pill btn-outline-light btn-md">256GB</button>
-                  </div>
-                  <div class="discount-box">
-                    <h6>Special Discount</h6>
-                  </div>
-                  <h3 class="text-truncate">Deal of the  Day From</h3>
-                  <div class="countdown" id="clock-arrival" data-hours="1" data-minutes="2" data-seconds="3">
-                    <ul>
-                      <li> <span class="days time"> </span><span class="title">Days</span></li>
-                      <li><span class="hours time"></span><span class="title">Hours</span></li>
-                      <li class="px-3"><span class="minutes time"></span><span class="title">Min</span></li>
-                      <li class="px-3"><span class="seconds time"></span><span class="title">Sec</span></li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
+      
       </div>
     </div>
   </div>
@@ -502,7 +370,7 @@
                       beginAtZero: true,
                       title: {
                           display: true,
-                          text: '<h6>Average Handling Time (seconds)</h6>',
+                          text: 'Average Handling Time (seconds)',
                           labelFontColor:"red"
                       }
                   }
@@ -684,10 +552,10 @@ const failedCallsCart = async (timeFrame, button) => {
 
         refreshCallsChart('weekly');
   
-      updateAverageHandlingTimeChart('Daily', document.querySelector('.avg'));
-      updateCallDistributionChart('Daily', document.querySelector('.update'));
-      CallOverviewChart('Daily', document.querySelector('.overview'))
-      failedCallsCart('Daily', document.querySelector('.failed'))
+      updateAverageHandlingTimeChart('daily', document.querySelector('.avg'));
+      updateCallDistributionChart('daily', document.querySelector('.update'));
+      CallOverviewChart('daily', document.querySelector('.overview'))
+      failedCallsCart('daily', document.querySelector('.failed'))
   
       function setActiveTab(activeButton, tab) {
           const tabs = document.querySelectorAll(tab);
@@ -879,9 +747,6 @@ const failedCallsCart = async (timeFrame, button) => {
 <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
 
 
-
-
-{% include 'pages/sample-page/components/sample-page.html' %}
 {% endblock %}
 
 {% block scriptcontent %}
