--- a/zonoapp/templates/layout/sidebar.html
+++ b/zonoapp/templates/layout/sidebar.html
@@ -28,7 +28,7 @@
         </li>  
         <li class="sidebar-main-title">
           <div>
-            <h6 class="lan-21">
+            <h6 class="lan-0">
               <a href="{% url 'dashboard' %}" class="lan-21 no-color-change" style="all: inherit;cursor: pointer;">Dashboard</a>
             </h6>
           </div>
@@ -41,32 +41,30 @@
           </li>   
           <li class="sidebar-list"><i class="fa fa-thumb-tack"></i><a class="sidebar-link sidebar-title" href="{% url 'create_campaign' %}">
             <svg class="stroke-icon">
-              <use href="{% static 'assets/svg/icon-sprite.svg' %}#stroke-home"></use>
+              <use href="{% static 'assets/svg/icon-sprite.svg' %}#stroke-email"></use>
             </svg>
             <svg class="fill-icon">
-              <use href="{% static 'assets/svg/icon-sprite.svg' %}#fill-home"></use>
+              <use href="{% static 'assets/svg/icon-sprite.svg' %}#fill-email"></use>
             </svg><span class=" ">Create Campaign</span></a>
           </li>
           <li class="sidebar-list"><i class="fa fa-thumb-tack"></i><a class="sidebar-link sidebar-title" href="{% url 'list_call_logs' %}">
               <svg class="stroke-icon">
-                <use href="{% static 'assets/svg/icon-sprite.svg' %}#stroke-file"></use>
+                <use href="{% static 'assets/svg/icon-sprite.svg' %}#stroke-contact"></use>
               </svg>
               <svg class="fill-icon">
-                <use href="{% static 'assets/svg/icon-sprite.svg' %}#fill-file"></use>
+                <use href="{% static 'assets/svg/icon-sprite.svg' %}#fill-contact"></use>
               </svg><span class=" ">Call Logs</span></a>  
           </li>          
           <li class="sidebar-list"><i class="fa fa-thumb-tack"></i><a class="sidebar-link sidebar-title" href="{% url 'manage_campaign' %}">
             <svg class="stroke-icon">
-              <use href="{% static 'assets/svg/icon-sprite.svg' %}#stroke-home"></use>
+              <use href="{% static 'assets/svg/icon-sprite.svg' %}#stroke-widget"></use>
             </svg>
             <svg class="fill-icon">
-              <use href="{% static 'assets/svg/icon-sprite.svg' %}#fill-home"></use>
+              <use href="{% static 'assets/svg/icon-sprite.svg' %}#fill-widget"></use>
             </svg><span class=" ">Campaign Managent</span></a>
-          </li> 
+            
+  
           
-          
-
-
           <li class="sidebar-main-title">
             <div>
               <h6 class="lan-21">
@@ -75,45 +73,36 @@
             </div>
           </li>  
           <li class="sidebar-list"><i class="fa fa-thumb-tack"></i><a class="sidebar-link sidebar-title" href="{% url 'agent_create' %}">
-
             <svg class="stroke-icon">
               <use href="{% static 'assets/svg/icon-sprite.svg' %}#stroke-user"></use>
             </svg>
             <svg class="fill-icon">
               <use href="{% static 'assets/svg/icon-sprite.svg' %}#fill-user"></use>
-            </svg>
-            
-            <span class=" ">Agent List</span>
-          </a>
-          </li>
-          
+            </svg><span class=" ">Agent Management</span></a>
+          </li>  
 
-
-          
           <li class="sidebar-main-title">
             <div>
               <h6 class="lan-21">
-                User Management
+                User
               </h6>
             </div>
           </li>  
-          
-
           <li class="sidebar-list"><i class="fa fa-thumb-tack"></i><a class="sidebar-link sidebar-title" href="{% url 'list-user' %}">
             <svg class="stroke-icon">
               <use href="{% static 'assets/svg/icon-sprite.svg' %}#stroke-user"></use>
             </svg>
             <svg class="fill-icon">
               <use href="{% static 'assets/svg/icon-sprite.svg' %}#fill-user"></use>
-            </svg><span class=" "> User List</span></a>
+            </svg><span class=" ">User Management</span></a>
           </li>
-
+          
+          
           <li class="sidebar-main-title">
             <div>
-              <h6 class="lan-21">
-                live Monitoring
+              <h6 class="lan-21"> Call Monitoring
               </h6>
-            </div>
+     
           </li>   
           <li class="sidebar-list"><i class="fa fa-thumb-tack"></i><a class="sidebar-link sidebar-title" href="{% url 'live_call_list' %}">
             <svg class="stroke-icon">
@@ -121,12 +110,11 @@
             </svg>
             <svg class="fill-icon">
               <use href="{% static 'assets/svg/icon-sprite.svg' %}#fill-contact"></use>
-            </svg><span class=" "> View Live Calls</span></a>
-          </li>         
+            </svg><span class=" ">Live Monitoring</span></a>
+          </li>
+                      
 
-        </li>  
-
-          <li class="sidebar-main-title">
+          <!-- <li class="sidebar-main-title">
             <div>
               <h6 class="lan-1">General</h6>
             </div>
@@ -160,65 +148,76 @@
               <li><a href="/footer_dark">Footer Dark</a></li>
               <li><a href="/footer_fixed">Footer Fixed</a></li>
             </ul>
-          </li>
+          </li> -->
           <!-- Voice -->
            
           <li class="sidebar-main-title">
             <div>
-                <a href="{% url 'voice_view' %}"  class="lan-21 no-color-change" style="all: inherit; cursor: pointer;"><h6>Voice</h6></a>
+                <h6>Voice</h6>
 
                 <!-- <h6 class="lan-21">
                     <a href="{% url 'voice_view' %}" class="lan-21 no-color-change" style="all: inherit; cursor: pointer;">Voice</a>
                 </h6> -->
             </div>
           </li>
-          
-          
-          <li class="sidebar-list"><i class="fa fa-thumb-tack"></i>
-            <a class="sidebar-link sidebar-title" href="{% url 'voice_view' %}"><h6>Voice</h6></a>
+          <!-- <li class="sidebar-list"> <i class="fa fa-thumb-tack"></i><a class="sidebar-link sidebar-title" href="#">
+            <svg class="stroke-icon">
+              <use href="{% static 'assets/svg/icon-sprite.svg' %}#stroke-layout"></use>
+            </svg>
+            <svg class="fill-icon">
+              <use href="{% static 'assets/svg/icon-sprite.svg' %}#fill-layout"></use>
+            </svg><span class="lan-7">                <a href="{% url 'voice_view' %}"  class="lan-21 no-color-change" style="all: inherit; cursor: pointer;"><h6>Voice</h6></a>
+            </span></a>
+        
+        </li> -->
+        <li class="sidebar-list"><i class="fa fa-thumb-tack"></i><a class="sidebar-link sidebar-title" href="{% url 'voice_view' %}">
+          <svg class="stroke-icon">
+            <use href="{% static 'assets/svg/icon-sprite.svg' %}#stroke-internationalization"></use>
+          </svg>
+          <svg class="fill-icon">
+            <use href="{% static 'assets/svg/icon-sprite.svg' %}#fill-internationalization"></use>
+          </svg><span class=" ">Voice</span></a>
+        </li>
 
-          </li>
 
           
           <!-- Provider -->
           <li class="sidebar-main-title">
             <div>
               <h6 class="lan-22">
-                <a href="{% url 'provider_view' %}" class="lan-22 no-color-change" style="all: inherit; cursor: pointer;">Provider</a>
+                Provider
               </h6>
             </div>
           </li>
-
-          <li class="sidebar-list"><i class="fa fa-thumb-tack"></i>
-            <a class="sidebar-link sidebar-title" href="{% url 'provider_view' %}"><h6>Provider</h6></a>
+          <li class="sidebar-list"><i class="fa fa-thumb-tack"></i><a class="sidebar-link sidebar-title" href="{% url 'provider_view' %}">
+            <svg class="stroke-icon">
+              <use href="{% static 'assets/svg/icon-sprite.svg' %}#stroke-learning"></use>
+            </svg>
+            <svg class="fill-icon">
+              <use href="{% static 'assets/svg/icon-sprite.svg' %}#fill-learning"></use>
+            </svg><span class=" ">Provider</span></a>
           </li>
 
           <li class="sidebar-main-title">
             <div>
-              <h6 class="lan-23">
-                <a href="{% url 'qa_parameter' %}" class="lan-22 no-color-change" style="all: inherit; cursor: pointer;">QA Parameters</a>
+              <h6 class="lan-22">
+                QA
               </h6>
             </div>
           </li>
-          <li class="sidebar-list"><i class="fa fa-thumb-tack"></i>
-            <a class="sidebar-link sidebar-title" href="{% url 'qa_parameter' %}"><h6>QA Parameters</h6></a>
+          <li class="sidebar-list"><i class="fa fa-thumb-tack"></i><a class="sidebar-link sidebar-title" href="{% url 'qa_parameter' %}">
+            <svg class="stroke-icon">
+              <use href="{% static 'assets/svg/icon-sprite.svg' %}#stroke-task"></use>
+            </svg>
+            <svg class="fill-icon">
+              <use href="{% static 'assets/svg/icon-sprite.svg' %}#fill-task"></use>
+            </svg><span class=" ">QA Parameters</span></a>
           </li>
-
-          <li class="sidebar-main-title">
-            <div>
-              <h6 class="lan-23">
-                <a href="{% url 'contact_sale' %}" class="lan-22 no-color-change" style="all: inherit; cursor: pointer;"> Contact Sale</a>
-              </h6>
-            </div>
-          </li>
-          <li class="sidebar-list"><i class="fa fa-thumb-tack"></i>
-            <a class="sidebar-link sidebar-title" href="{% url 'contact_sale' %}"><h6> Contact Sale </h6></a>
-          </li>
-
           
 
+
           
-        
+        </ul>
       </div>
       <div class="right-arrow" id="right-arrow"><i data-feather="arrow-right"></i></div>
     </nav>
