report page created

--- a/zonoapp/templates/layout/sidebar.html
+++ b/zonoapp/templates/layout/sidebar.html
@@ -112,6 +112,23 @@
               <use href="{% static 'assets/svg/icon-sprite.svg' %}#fill-contact"></use>
             </svg><span class=" ">Live Monitoring</span></a>
           </li>
+
+
+
+          <!-- <li class="sidebar-main-title">
+            <div>
+              <h6 class="lan-21"> Report
+              </h6>
+     
+          </li>   
+          <li class="sidebar-list"><i class="fa fa-thumb-tack"></i><a class="sidebar-link sidebar-title" href="{% url 'report_download' %}">
+            <svg class="stroke-icon">
+              <use href="{% static 'assets/svg/icon-sprite.svg' %}#stroke-contact"></use>
+            </svg>
+            <svg class="fill-icon">
+              <use href="{% static 'assets/svg/icon-sprite.svg' %}#fill-contact"></use>
+            </svg><span class=" ">Download Report</span></a>
+          </li> -->
                       
 
           <!-- <li class="sidebar-main-title">
