--- a/zonoapp/templates/layout/sidebar.html
+++ b/zonoapp/templates/layout/sidebar.html
@@ -115,7 +115,7 @@
 
 
 
-          <!-- <li class="sidebar-main-title">
+          <li class="sidebar-main-title">
             <div>
               <h6 class="lan-21"> Report
               </h6>
@@ -128,7 +128,7 @@
             <svg class="fill-icon">
               <use href="{% static 'assets/svg/icon-sprite.svg' %}#fill-contact"></use>
             </svg><span class=" ">Download Report</span></a>
-          </li> -->
+          </li>
                       
 
           <!-- <li class="sidebar-main-title">
