--- a/zonoapp/templates/pages/user_management/add_user.html
+++ b/zonoapp/templates/pages/user_management/add_user.html
@@ -54,8 +54,6 @@
     <!-- User Table (Visible by Default) -->
     <div class="card" id="userTable">
         <div class="card-header">
-            <h4>Striped Row with Inverse Table</h4>
-            <span>Use <code>.table-striped</code> to add zebra-striping to any table row within the table. This styling doesn't work in IE8 and below as the :nth-child CSS selector isn't supported.</span>
         </div>
         <div class="card-block row">
             <div class="col-sm-12 col-lg-12 col-xl-12">
@@ -236,7 +234,7 @@ document.addEventListener("DOMContentLoaded", function () {
 
             // Populate the fields in the edit modal
             editAgentIdField.value = userId;
-            editAgentNameField.value = username;
+            editAgentNameField.value = email;
             editEmailField.value = email;
             editOrganisationField.value = organisation;
 
